--- a/appspec.yml
+++ b/appspec.yml
@@ -7,12 +7,12 @@ hooks:
   BeforeInstall:
     - location: install_dependencies
       timeout: 300
-      runas: root
+      runas: ubuntu
     - location: start_server
       timeout: 300
-      runas: root
+      runas: ubuntu
   ApplicationStop:
     - location: stop_server
       timeout: 300
-      runas: root
+      runas: ubuntu
 
