--- a/appspec.yml
+++ b/appspec.yml
@@ -5,7 +5,7 @@ files:
     destination: /var/www/html/
 hooks:
   BeforeInstall:
-    - location: install_dependencies.sh
+    - location: install_dependencies
       timeout: 300
       runas: root
     
