--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
             - echo "Post build phase"
 artifacts:
     files:
-        - scripts/install_apache.sh
+        - scripts/install_dependencies
         - index.html
         - appspec.yml
     discard-paths: yes
